--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 # This file contains the list of required python packages for the project.
 
 lark==1.1.9
-flask==3.1.1
-flask-caching==2.3.1
 libsass==0.23.0
-requests>=2.6.0 
+Jinja2==3.1.6
+requests==2.32.4
 wheel==0.45.1
+Nuitka==2.7.11
