--- a/static/Makefile.am
+++ b/static/Makefile.am
@@ -1,5 +1,8 @@
-EXTRA_DIST = images styles
+EXTRA_DIST = images styles templates
 
 install-data-hook:
-	mkdir -p $(DESTDIR)$(pkgsharedir)/
-	cp -R $(srcdir)/* $(DESTDIR)$(pkgsharedir)/
+	$(MKDIR_P) $(DESTDIR)$(pkgdatadir)/
+	cp -R $(srcdir)/images $(srcdir)/styles $(srcdir)/templates $(DESTDIR)$(pkgdatadir)/
+
+uninstall-hook:
+	rm -rf $(DESTDIR)$(pkgdatadir)/images $(DESTDIR)$(pkgdatadir)/styles $(DESTDIR)$(pkgdatadir)/templates
